--- a/frontend/front-antigo/feed.html
+++ b/frontend/front-antigo/feed.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Rachaí</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="icon" href="imagens/MicrosoftTeams-image__4_-removebg-preview.png" type="image/svg+xml">
+  <link rel="icon" href="imagens/logo-no-bg.png" type="image/svg+xml">
   <style>
     
     body {
@@ -99,7 +99,7 @@
 <body>
   <div class="sidebar">
     
-    <img src="imagens/MicrosoftTeams-image__4_-removebg-preview.png" alt="Logo do aplicativo">  
+    <img src="imagens/logo-no-bg.png" alt="Logo do aplicativo">  
     <div class="sidebar-options">
       <a href="#">Perfil</a>
       <a href="carona_reservada_vazio.html">Caronas Agendadas</a>
@@ -136,7 +136,7 @@
     </div>
 
     <div class="feed-item" data-location="Itapevi" >
-      <img class="profile-img" src="imagens/1852218-retrato-de-uma-mulher-sorridente-foto.jpg" alt="Foto de perfil do viajante">
+      <img class="profile-img" src="imagens/mulher-sorridente.jpg" alt="Foto de perfil do viajante">
       <div>
         <h4><strong>Leticia Oliveira</strong></h4>
         <p><strong>Origem:</strong> Itapevi - SP</p>
@@ -147,7 +147,7 @@
     </div>
 
     <div class="feed-item" data-location="Cotia">   
-        <img class="profile-img" src="imagens/homem_2.jpg" alt="Foto de perfil do viajante"> 
+        <img class="profile-img" src="imagens/homem.jpg" alt="Foto de perfil do viajante"> 
         <div>
           <h4><strong>Lucas Lopes</strong></h4>
           <p><strong>Origem:</strong> Cotia Centro - SP</p>
